# flow

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.atl/: .skill-registry.cache.json  skill-registry.md
docs/: manual-verification-management-ui.md
scripts/: bench_format.mjs  diff_test.mjs  e2e.mjs
src/: Overlay.tsx  Settings.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: few_shot.json  prompt_engineer_few_shot.json  prompt_engineer_system.txt  system_prompt.txt
src-tauri/src/: audio.rs  db.rs  format.rs  frontmost.rs  http.rs  inject.rs  lib.rs  models.rs  postprocess.rs  prompt.rs  quickclean.rs  settings.rs  stats.rs  stt.rs  update.rs
src/app/: App.tsx  Sidebar.tsx  ViewContext.tsx  ViewRouter.tsx
src/components/: HistoryFeed.tsx  StatRail.tsx
src/components/charts/: Bars.tsx  Gauge.tsx  Heatmap.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Spinner.tsx  Tabs.tsx
src/lib/: api.ts  cn.ts  diff.ts  hotkey.ts
src/views/: DictionaryView.tsx  HomeView.tsx  InsightsView.tsx  SettingsView.tsx  SnippetsView.tsx  StyleView.tsx
