[package]
name = "flow"
version = "0.1.0"
description = "Free, local-first voice dictation for macOS (Wispr Flow style)"
authors = ["Jose Gabriel Vilchez"]
edition = "2021"

[lib]
name = "flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
cpal = "0.15"
whisper-rs = { version = "0.16", features = ["metal"] }
enigo = "0.6"
macos-accessibility-client = "0.0.1"
arboard = "3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dirs = "6"
hound = "3.5"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = "0.4"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }

[profile.release]
lto = true
codegen-units = 1
